feat(exception-handling): add custom exceptions for forklift domain and update error handling