@@ -4,7 +4,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
-import com.v1rex.liftnexus.common.exception.ResourceNotFoundException;
+import com.v1rex.liftnexus.forklift.exception.ForkliftTypeNameExistsException;
+import com.v1rex.liftnexus.forklift.exception.ForkliftTypeNotFoundException;
 import com.v1rex.liftnexus.forklift.domain.EquipmentType;
 import com.v1rex.liftnexus.forklift.domain.ForkliftType;
 import com.v1rex.liftnexus.forklift.dto.ForkliftTypeRequest;
@@ -68,7 +69,7 @@ public class ForkliftTypeServiceTest {
       when(forkliftTypeRepository.existsByModelName("Toyota X")).thenReturn(true);
 
       assertThatThrownBy(() -> forkliftTypeService.createForkliftType(request))
-          .isInstanceOf(IllegalStateException.class)
+          .isInstanceOf(ForkliftTypeNameExistsException.class)
           .hasMessageContaining("already exists");
 
       verifyNoInteractions(forkliftTypeMapper);
@@ -98,8 +99,7 @@ public class ForkliftTypeServiceTest {
       when(forkliftTypeRepository.findById(99L)).thenReturn(Optional.empty());
 
       assertThatThrownBy(() -> forkliftTypeService.findEntityById(99L))
-          .isInstanceOf(ResourceNotFoundException.class)
-          .hasMessageContaining("ForkliftType with ID 99 not found.");
+          .isInstanceOf(ForkliftTypeNotFoundException.class);
     }
 
     @Test
@@ -136,8 +136,8 @@ public class ForkliftTypeServiceTest {
 
       Page<ForkliftTypeResponse> result = forkliftTypeService.findAll(pageRequest);
 
-      assertThat(result.getContent()).hasSize(1);
-      assertThat(result.getContent().get(0)).isEqualTo(responseDto);
-    }
-  }
+       assertThat(result.getContent()).hasSize(1);
+       assertThat(result.getContent().getFirst()).isEqualTo(responseDto);
+     }
+   }
 }
